--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
-    margin: 0;
-    min-height: 100vh;
+
+    
 }
 
 img {
@@ -13,6 +13,8 @@ img {
 .logo {
     width:initial;
     height: initial;
+
+    border-radius: 100%;
 }
 .header {
     display: flex;
@@ -21,12 +23,28 @@ img {
     padding: 8px 146px;
     background-color: #1F2937;
     height: 80px;
+
+    gap: 8px;
 }
 
 .header-links {
     display: flex;
     font-size: 28px;
-    gap: 80px;
+    gap: 15px;
+
+    justify-content: center;
+    align-items:  center;
+}
+
+.logo-title {
+    color: #F9FaF8;
+    font-size: 44px;
+    font-weight: bold;
+    margin-right: auto;
+}
+.logo-link {
+    height: 50px;
+    width: 50px;    
 }
 
 .body-content {
@@ -35,20 +53,34 @@ img {
 }
 
 .hero-header {
+    order: 1;
     display: flex;
-    height: 600px;
+    
     justify-content: center;
     align-items: center;
     padding: 0px 142px;
-    background-color: #1F2937;
+    /* background-color: #1F2937; */
+
+    background-image: url("./images/badminton-court-bg.jpg");
+
+    /* Set a specific height */
+    min-height: 600px;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .hero-content {
     display: flex;
     flex: 1 1 1362px;
     height: 222px;
+    flex-direction: row-reverse;
     justify-content: space-between;
     align-items: center;
+
 }
 
 .hero-image {
@@ -66,9 +98,14 @@ img.hero-img-class {
 .text-container {
     display: flex;
     flex-direction: column;
-    width: 400px;
+    width: 500px;
     font-size: 18px;
     color: #F9FaF8;
+
+    background-color: crimson;
+    opacity: 0.9;
+    padding: 24px;
+    border-radius: 25px;
 }
 
 .hero-button{
@@ -81,19 +118,27 @@ img.hero-img-class {
     color: #F9FaF8;
     font-size: 18px;
     font-weight: bold;
+
+    transition: all 0.5s;
+    cursor: pointer;
 }
 
+
 .picture-info {
+    order: 2;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 500px;
+    height: 800px;
 }
 .picture-title {
     font-weight: bolder;
-    font-size: 36px;
+    font-size: 48px;
     margin: 60px;
+
+    color: crimson;
+    
 }
 
 .image-container {
@@ -101,6 +146,9 @@ img.hero-img-class {
     justify-content: center;
     align-self: center;
     gap: 40px;
+    width: 1100px;
+
+    flex-wrap: wrap;
 }
 
 .display-info {
@@ -131,6 +179,7 @@ img.box-img {
 }
 
 .filler-section {
+    order: 3;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -162,10 +211,20 @@ img.box-img {
 }
 
 .action-section {
+    order: 4;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 400px;
+
+    background-image: url("./images/sky-bg.jpg");
+    
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .action-content {
@@ -176,6 +235,7 @@ img.box-img {
     background-color: royalblue;
 
     border-radius: 25px;
+    opacity: 0.8;
 
 }
 
@@ -210,4 +270,29 @@ img.box-img {
     font-size: 16px;
     color: white
 }
-a {text-decoration: none; color: white}
+a {text-decoration: none; color: white; padding: 8px 28px;}
+
+.button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  .button:hover span {
+    padding-right: 25px;
+  }
+  
+  .button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
