--- a/style.css
+++ b/style.css
@@ -1,13 +1,45 @@
 html {
     overflow-x: hidden;
 }
+
 body {
     display: flex;
     flex-shrink: 0;
     flex-direction: column;
     margin: 0;
     overflow-x: hidden;
+    font-family: "Lucida Console", "Courier New", monospace;
 }
+
+* {
+    box-sizing: border-box;
+}
+
+a:not(button) {
+    position: relative;
+    text-decoration: none;
+    color: white;
+    padding: 5px 20px;
+  }
+  
+  a:not(button)::before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 4px;
+      border-radius: 1px;
+      background-color: plum;
+      bottom: 0;
+      left: 0;
+      transform-origin: right;
+      transform: scaleX(0);
+      transition: transform .3s ease-in-out;
+    }
+  
+  a:not(button):hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
+  }
 
 /* html, body {
     display: flex;
@@ -42,7 +74,6 @@ img {
     justify-content: center;
     align-items: center;
 
-    
 }
 
 .logo {
@@ -53,9 +84,10 @@ img {
 }
 
 .logo-title {
+    display: flex;
     color: #F9FaF8;
     font-size: 2.5em;
-    font-weight: bold;
+    font-weight: lighter;
     flex-shrink: 1;
 }
 
@@ -78,6 +110,7 @@ img {
 
 .logo-link {
     flex-shrink: 1;
+    font-size: 1.7em;
     min-width: 1em;    
 }
 
@@ -144,6 +177,8 @@ img.hero-img-class {
 }
 
 .hero-button{
+    flex-shrink: 5;
+    max-width: 100%;
     background-color: cornflowerblue;
     border-radius: 6px;
     border-style: none;
@@ -220,6 +255,12 @@ img.box-img {
     color: black;
 }
 
+#membership-info {
+    align-self: flex-start;
+    color: black;
+    display: inline-flex;
+}
+
 .filler-section {
     order: 3;
     display: flex;
@@ -238,12 +279,13 @@ img.box-img {
     max-width: 50rem;
 }
 
-.filler-quote {
+.text-section {
     font-size: 2.2em;
     font-style: lighter;
     font-family: italic;
     color: #1F2937;
     opacity: 0.8;
+    padding: 1em;
 }
 
 .author {
@@ -314,9 +356,14 @@ img.box-img {
     font-size: 1rem;
     color: white
 }
-a {text-decoration: none; color: white; padding: 8px 28px;}
 
-.button span {
+.button-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+/* .button span {
     cursor: pointer;
     display: inline-block;
     position: relative;
@@ -339,7 +386,7 @@ a {text-decoration: none; color: white; padding: 8px 28px;}
   .button:hover span:after {
     opacity: 1;
     right: 0;
-  }
+  } */
 
 
   @media screen and (max-width: 881px) {
@@ -359,4 +406,11 @@ a {text-decoration: none; color: white; padding: 8px 28px;}
     justify-content: center;
     align-items: center;
   }
+  .button-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 5px;
+}
   }
