--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ img {
     align-items: center;
     padding: 0.4rem 9.125rem;
     background-color: #1F2937;
-    height: 7rem;
+    min-height: 4rem;
 }
 
 .header-title {
@@ -78,7 +78,6 @@ img {
 
 .logo {
     max-width: 5em;
-    height: auto;
     border-radius: 100%;
     flex-shrink: 1;
 }
@@ -96,7 +95,7 @@ img {
     display: flex;
     max-width: 10em;
     flex-shrink: 1;
-    font-size: 2em;
+    font-size: 1.3em;
     padding: 5px;
 
     justify-content: center;
