--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
     overflow-x: hidden;
+    /* www.penguins.co.nz */
 }
 
 body {
@@ -16,39 +17,27 @@ body {
     box-sizing: border-box;
 }
 
-a:not(button) {
-    position: relative;
+span:not(.button-span) {
+    color: red;
+}
+a {
     text-decoration: none;
     color: white;
-    padding: 5px 20px;
   }
   
-  a:not(button)::before {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 4px;
-      border-radius: 1px;
-      background-color: plum;
-      bottom: 0;
-      left: 0;
-      transform-origin: right;
-      transform: scaleX(0);
-      transition: transform .3s ease-in-out;
-    }
-  
-  a:not(button):hover::before {
-    transform-origin: left;
-    transform: scaleX(1);
-  }
+.text-link:hover {
+    background-color: #97a2bc;
+    border-radius: 1em;
+}
 
-/* html, body {
-    display: flex;
-    flex-direction: column
-    margin: 0; padding: 0; width: 100%;
-    height: 100%;
-    overflow-x: hidden !important;
-  } */
+.logo-link:hover {
+    opacity: 60%;
+}
+
+.hero-button:hover {
+    background-color: #97a2bc;
+    border-radius: 1em;
+}
 
 img {
     flex-shrink: 1;
@@ -64,6 +53,7 @@ img {
     padding: 0.4rem 9.125rem;
     background-color: #1F2937;
     min-height: 4rem;
+
 }
 
 .header-title {
@@ -76,7 +66,7 @@ img {
 
 }
 
-.logo {
+.header-logo {
     max-width: 5em;
     border-radius: 100%;
     flex-shrink: 1;
@@ -85,18 +75,22 @@ img {
 .logo-title {
     display: flex;
     color: #F9FaF8;
+    max-width: 10em;
     font-size: 2.5em;
     font-weight: lighter;
     flex-shrink: 1;
+
+    font-family: "Lucida Console", monospace;
 }
 
 .header-links {
     /* background-color: lightseagreen; */
     display: flex;
-    max-width: 10em;
+    max-width: 100%;
     flex-shrink: 1;
     font-size: 1.3em;
-    padding: 5px;
+    padding: 10px;
+    gap: 10px;
 
     justify-content: center;
     align-items:  center;
@@ -104,13 +98,17 @@ img {
 
 .text-link {    
     flex-shrink: 1;
+    padding: 5px 15px;
     white-space: nowrap;
 }
 
 .logo-link {
     flex-shrink: 1;
-    font-size: 1.7em;
-    min-width: 1em;    
+    font-size: 1em;
+    max-width: 1.7em;
+    min-width: 1em;  
+
+    margin: 5px 15px;
 }
 
 .body-content {
@@ -169,8 +167,8 @@ img.hero-img-class {
     min-width: 321px;
     color: #F9FaF8;
 
-    background-color: crimson;
-    opacity: 0.9;
+    background-color: #1F2937;
+    
     padding: 1em;
     border-radius: 25px;
 }
@@ -178,7 +176,7 @@ img.hero-img-class {
 .hero-button{
     flex-shrink: 5;
     max-width: 100%;
-    background-color: cornflowerblue;
+    background-color: #8998bc;
     border-radius: 6px;
     border-style: none;
     align-self: flex-start;
@@ -186,7 +184,7 @@ img.hero-img-class {
     color: #F9FaF8;
     font-size: 18px;
     font-weight: bold;
-    border: 2px solid oldlace;
+    /* border: 2px solid oldlace; */
 
     transition: all 0.5s;
     cursor: pointer;
@@ -432,4 +430,5 @@ img.box-img {
     align-items: center;
     gap: 5px;
 }
+
   }
