--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ span:not(.button-span) {
     color: red;
 }
 a {
+    position: relative;
     text-decoration: none;
     color: white;
   }
@@ -139,7 +140,7 @@ img {
 
 .hero-content {
     display: flex;
-    width: 85em;
+    width: 70em;
     height: 20em;
     flex-direction: row-reverse;
     justify-content: space-between;
@@ -205,9 +206,9 @@ img.hero-img-class {
 }
 .picture-title {
     font-weight: bolder;
-    font-size: 3em;
-    margin: 0.5em;
-    color: crimson;
+    font-size: 2.2em;
+    margin: 0.5em 0 1em;
+    color: black;
 }
 
 .image-container {
@@ -356,6 +357,13 @@ img.box-img {
     padding: 5px;
 }
 
+.faq-container {
+    display: flex;
+    flex-direction: column;
+    padding-top: 6rem;
+    justify-content: flex-start;
+    min-height: 100vh;
+}
 .faq-content {
     color: white;
     background-color: cadetblue;
@@ -375,36 +383,36 @@ img.box-img {
     background-color: #1F2937;
     font-size: 1rem;
     color: white;
+    padding: 1em;
     margin-top: auto;
 }
 
+.question {
+    color: rgb(255, 234, 71);
+    font-size: 1.5em;
+    margin: 0px; margin-bottom:5px;
+    font-weight: bold;
+    margin-top: 1em;
+}
 
-
-/* .button span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
-  }
+  #session-info::before, #membership-info::before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 4px;
+      border-radius: 4px;
+      background-color: #18272F;
+      bottom: 0;
+      left: 0;
+      transform-origin: right;
+      transform: scaleX(0);
+      transition: transform .3s ease-in-out;
+    }
   
-  .button span:after {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
+   #session-info:hover::before, #membership-info:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
   }
-  
-  .button:hover span {
-    padding-right: 25px;
-  }
-  
-  .button:hover span:after {
-    opacity: 1;
-    right: 0;
-  } */
-
 
   @media screen and (max-width: 881px) {
     .header-links {
@@ -430,5 +438,4 @@ img.box-img {
     align-items: center;
     gap: 5px;
 }
-
   }
