--- a/style.css
+++ b/style.css
@@ -315,10 +315,6 @@ img.box-img {
     min-width: 360px;
 }
 
-.to-home-button {
-    text-align: center;
-}
-
 
 .footer {
     order: 5;
@@ -365,7 +361,97 @@ img.box-img {
     display:none;   
   }
 
-  @media screen and (max-width: 881px) {
+  .title-text {
+    font-size: 2rem;
+}
+
+.nav-logo-box {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    padding-bottom: 0%;
+}
+#side-logo {
+    flex-shrink: 1;
+    font-size: 1.1em;
+    max-width: 1.7em;
+    min-width: 1em;  
+    padding: 0px;
+    margin: 20px 15px;
+    
+}
+
+#navBar {
+    color: mediumaquamarine;
+    font-size: 1.7em;
+    margin-right: auto;
+    background-color: #3d4b5f;
+    padding: 0.2em;
+    border-radius: 0.3em;
+    max-height: 100vh;
+}
+#navBar:hover {
+    background-color: #97a2bc;
+}
+
+  /* The side navigation menu */
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #111; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 50px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  }
+  
+  /* The navigation menu links */
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  /* When you mouse over the navigation links, change their color */
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  /* Position and style the close button (top right corner) */
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+  .sidenav:nth-child(n) {
+    /* position: absolute;
+    bottom: 0; */
+    color: tomato;
+    text-align: center;
+  }
+  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+  #main {
+    transition: margin-left .5s;
+    padding: 20px;
+  }
+  
+  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+    
+  }
+
+@media screen and (max-width: 768px) {
     .header-links {
         display: none;
     }
@@ -388,8 +474,15 @@ img.box-img {
     justify-content: space-evenly;
     align-items: center;
     gap: 5px;
-}
+    }
     .faq-button {
         display:block;
     };
-  }
+    
+    
+}
+@media (hover: none), (pointer: coarse) {
+    .navOpen {
+        display: block;
+    }
+}
