add iframe map for our location + correct spelling mistake in Ralph name and add (ucanbc)

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     flex-direction: column;
     margin: 0;
     overflow-x: hidden;
-    font-family: "Lucida Console", "Courier New", monospace;
+    font-family: "Open Sans", "Lucida Console", "Courier New", monospace;
 }
 
 * {
