--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     flex-direction: column;
     margin: 0;
     overflow-x: hidden;
-    font-family: "Open Sans", "Lucida Console", "Courier New", monospace;
+    font-family: "Inter", "Lucida Console", "Courier New", monospace;
 }
 
 * {
@@ -152,6 +152,9 @@ img {
     display: flex;
     flex-shrink: 1;
     flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
     max-width: 30em;
     min-width: 321px;
     color: #F9FaF8;
@@ -298,6 +301,7 @@ img.box-img {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    gap: 1em;
 }
 
 .other-page-header {
@@ -508,6 +512,16 @@ opacity: 60%;
 
   }
 
+iframe {
+    width:651;
+    height:473;
+} 
+ 
+ .mapouter {
+    position:relative;text-align:right;height:473px;width:651px;}
+    
+.gmap_canvas {overflow:hidden;background:none!important;height:473px;width:651px;}
+
 @media screen and (max-width: 1100px) {
     .header-links {
         display: none;
@@ -550,9 +564,26 @@ opacity: 60%;
     .sessiongraphic {
         display: none;
     }
+    .mapouter {
+        position:relative;
+        text-align:right;
+        height:236px;
+        width:325px;
+    }
+    .gmap_canvas {
+        overflow:hidden;
+        background:none!important;
+        height:236px;
+        width:325px;
+    }
+    iframe {
+    width:236;
+    height:325;
+    }
 }
-@media (hover: none), (pointer: coarse) {
+
+/* @media (hover: none), (pointer: coarse) {
     .navOpen {
         display: block;
     }
-}
+} */
