restructure membership info with updated concession cards + align session-info button

--- a/style.css
+++ b/style.css
@@ -297,11 +297,17 @@ img.box-img {
     padding: 1em;
 }
 
-.button-container {
+#button-container {
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     gap: 1em;
+}
+
+#session-button {
+    margin: 0 auto;
+    
 }
 
 .other-page-header {
