--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ a {
 .sign-up-button {
     flex-shrink: 5;
     max-width: 100%;
+    text-align: center;
     background-color: red;
     border-radius: 6px;
     border-style: none;
@@ -326,7 +327,7 @@ img.box-img {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    gap: 1em;
+    gap: 0.3em;
 }
 
 #session-button {
