add media gallery in media section, not compatible with small screen

--- a/images/UC Badminton Club_files/style.css
+++ b/images/UC Badminton Club_files/style.css
@@ -185,7 +185,7 @@ img {
     max-width: 30em;
     min-width: 321px;
     color: #F9FaF8;
-    /*opacity: 70%;*/
+    opacity: 88%;
     background-color: #1F2937;
     margin: 1em;
     padding: 1em;
