--- a/gallery.css
+++ b/gallery.css
@@ -1,23 +1,77 @@
-/* Gallery container */
-#index-gallery {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto;
-    grid-gap: 10px;
+*, *::before, *::after {
+    box-sizing: border-box;
 }
 
-#index-gallery.gallery-img {
+body {
+    margin: 0;
+}
+
+.carousel-wrapper {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+
+    padding: 10px;
+}
+.carousel {
+    width: 70vw;
+    height: 100vh;
+    position: relative; 
+}
+
+.carousel > ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.slide {
+    position: absolute;
+    inset: 0;
+    opacity: 0;
+    transition: 100ms opacity ease-in-out;
+    transition-delay: 100ms;
+}
+
+.slide > img {
+    display: block;
     width: 100%;
-    height: 300px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    cursor: pointer;
-
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+.slide[data-active] {
+    opacity: 1;
+    transition-delay: 0ms;
+    z-index: 1;
 }
 
-/* Images */
-#index-gallery .img1 {
-    grid-area: img1;
+.carousel-button {
+    position: absolute;
+    z-index: 2;
+    background: none;
+    border: none;
+    font-size: 4rem;
+    top: 50%; 
+    transform: translateY(-50%);
+    color: rgba(255,255,255, .5);
+    cursor: pointer;
+    border-radius: .25rem;
+    padding: 0 .5rem;
+    background-color: rgba(0, 0, 0, .1);
+}
 
+.carousel-button:hover,
+.carousel-button:focus {
+    color: white;
+    background-color: rgba(0, 0, 0, .2);
+    
+}
+
+.carousel-button.prev {
+    left: 1rem;
+}
+
+.carousel-button.next {
+    right: 1rem;
 }
