--- a/gallery.css
+++ b/gallery.css
@@ -65,7 +65,6 @@ body {
 .carousel-button:focus {
     color: white;
     background-color: rgba(0, 0, 0, .2);
-    
 }
 
 .carousel-button.prev {
@@ -75,3 +74,36 @@ body {
 .carousel-button.next {
     right: 1rem;
 }
+
+.row {
+    display: none;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 600px) {
+    .carousel-wrapper {
+        display: none;
+    }
+    .row {
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap; /* IE10 */
+    flex-wrap: wrap;
+    padding: 0 4px;
+    }
+    
+    .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+    }
+    
+    .column {
+        
+        flex: 100%;
+        max-width: 100%;
+      }
+}
+
+
+
